--- a/Waroenk/MainWindow.xaml
+++ b/Waroenk/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Margin="0,0,0,-51" HorizontalAlignment="Left" Width="790">
-        <Label Content="WAROENK" HorizontalAlignment="Left" Margin="32,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
+        <Label Content="WAROENK" HorizontalAlignment="Left" Margin="33,-7,0,0" VerticalAlignment="Top" FontSize="48" FontWeight="Bold"/>
         <Label Content="Keranjang Belanja" HorizontalAlignment="Left" Margin="373,86,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.211,-0.384" FontWeight="Bold"/>
         <Rectangle HorizontalAlignment="Left" Height="327" Margin="365,60,0,0" Stroke="Black" VerticalAlignment="Top" Width="391"/>
         <ListBox x:Name="listKeranjangBelanja" HorizontalAlignment="Left" Height="197" VerticalAlignment="Top" Width="362" Margin="380,159,0,0" MouseDoubleClick="onlistKeranjangBelanjaDoubleClicked">
@@ -36,14 +36,14 @@
 
             </Grid>
         </ListBox>
-        <Label Content="SubTotal" HorizontalAlignment="Left" Margin="5,312,0,0" VerticalAlignment="Top"/>
-        <Label Content="Promo" HorizontalAlignment="Left" Margin="5,345,0,0" VerticalAlignment="Top"/>
-        <Label Content="Total" HorizontalAlignment="Left" Margin="8,374,0,0" VerticalAlignment="Top" Width="40" RenderTransformOrigin="0.89,0.279"/>
-        <Label Content="79.000" HorizontalAlignment="Left" Margin="296,312,0,0" VerticalAlignment="Top"/>
-        <Label Content="9.000" HorizontalAlignment="Left" Margin="302,345,0,0" VerticalAlignment="Top"/>
-        <Label Content="69.000" HorizontalAlignment="Left" Margin="296,374,0,0" VerticalAlignment="Top"/>
+        <Label Content="SubTotal" HorizontalAlignment="Left" Margin="7,299,0,0" VerticalAlignment="Top"/>
+        <Label Content="Promo" HorizontalAlignment="Left" Margin="7,332,0,0" VerticalAlignment="Top"/>
+        <Label Content="Total" HorizontalAlignment="Left" Margin="10,361,0,0" VerticalAlignment="Top" Width="40" RenderTransformOrigin="0.89,0.279"/>
+        <Label Content="79.000" HorizontalAlignment="Left" Margin="298,299,0,0" VerticalAlignment="Top"/>
+        <Label Content="9.000" HorizontalAlignment="Left" Margin="304,332,0,0" VerticalAlignment="Top"/>
+        <Label Content="69.000" HorizontalAlignment="Left" Margin="298,361,0,0" VerticalAlignment="Top"/>
         <Rectangle HorizontalAlignment="Left" Height="205" Margin="10,63,0,0" Stroke="Black" VerticalAlignment="Top" Width="341"/>
-        <Button Content="Daftar Menu" HorizontalAlignment="Left" Height="52" Margin="365,4,0,0" VerticalAlignment="Top" Width="391" Click="onDaftarMenuClicked"/>
+        <Button Content="Daftar Menu" HorizontalAlignment="Left" Height="52" Margin="365,4,0,0" VerticalAlignment="Top" Width="391" Click="onDaftarMenuClicked" Background="#FF00FF1F" FontFamily="Adobe Caslon Pro Bold" FontWeight="Bold"/>
         <Label Content="Metode Pembayaran" HorizontalAlignment="Left" Margin="21,67,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <Label Content="Promo" HorizontalAlignment="Left" Margin="21,180,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <Button x:Name="btnGantiPromo" Content="Ganti" HorizontalAlignment="Left" Height="24" Margin="256,211,0,0" VerticalAlignment="Top" Width="85" Click="onBtnGantiPromoClicked"/>
