--- a/Waroenk/MainWindow.xaml
+++ b/Waroenk/MainWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Waroenk"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid Margin="0,0,0,-51" HorizontalAlignment="Left" Width="790">
-        <Label Content="WAROENK" HorizontalAlignment="Left" Margin="33,-7,0,0" VerticalAlignment="Top" FontSize="48" FontWeight="Bold"/>
-        <Label Content="Keranjang Belanja" HorizontalAlignment="Left" Margin="373,86,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.211,-0.384" FontWeight="Bold"/>
+        Title="MainWindow" Height="446" Width="772">
+    <Grid Margin="0,0,0,-6" HorizontalAlignment="Left" Width="790">
+        <Label Content="WAROENK" HorizontalAlignment="Left" Margin="38,-12,0,0" VerticalAlignment="Top" FontSize="48" FontWeight="Bold"/>
+        <Label Content="KERANJANG PESANAN" HorizontalAlignment="Left" Margin="373,86,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.211,-0.384" FontWeight="Bold"/>
         <Rectangle HorizontalAlignment="Left" Height="327" Margin="365,60,0,0" Stroke="Black" VerticalAlignment="Top" Width="391"/>
         <ListBox x:Name="listKeranjangBelanja" HorizontalAlignment="Left" Height="197" VerticalAlignment="Top" Width="362" Margin="380,159,0,0" MouseDoubleClick="onlistKeranjangBelanjaDoubleClicked">
             <ListBox.ItemTemplate>
@@ -36,20 +36,20 @@
 
             </Grid>
         </ListBox>
-        <Label Content="SubTotal" HorizontalAlignment="Left" Margin="7,299,0,0" VerticalAlignment="Top"/>
-        <Label Content="Promo" HorizontalAlignment="Left" Margin="7,332,0,0" VerticalAlignment="Top"/>
-        <Label Content="Total" HorizontalAlignment="Left" Margin="10,361,0,0" VerticalAlignment="Top" Width="40" RenderTransformOrigin="0.89,0.279"/>
-        <Label Content="79.000" HorizontalAlignment="Left" Margin="298,299,0,0" VerticalAlignment="Top"/>
-        <Label Content="9.000" HorizontalAlignment="Left" Margin="304,332,0,0" VerticalAlignment="Top"/>
-        <Label Content="69.000" HorizontalAlignment="Left" Margin="298,361,0,0" VerticalAlignment="Top"/>
-        <Rectangle HorizontalAlignment="Left" Height="205" Margin="10,63,0,0" Stroke="Black" VerticalAlignment="Top" Width="341"/>
-        <Button Content="Daftar Menu" HorizontalAlignment="Left" Height="52" Margin="365,4,0,0" VerticalAlignment="Top" Width="391" Click="onDaftarMenuClicked" Background="#FF00FF1F" FontFamily="Adobe Caslon Pro Bold" FontWeight="Bold"/>
-        <Label Content="Metode Pembayaran" HorizontalAlignment="Left" Margin="21,67,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label Content="Promo" HorizontalAlignment="Left" Margin="21,180,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Button x:Name="btnGantiPromo" Content="Ganti" HorizontalAlignment="Left" Height="24" Margin="256,211,0,0" VerticalAlignment="Top" Width="85" Click="onBtnGantiPromoClicked"/>
+        <Label Content="SubTotal" HorizontalAlignment="Left" Margin="10,245,0,0" VerticalAlignment="Top"/>
+        <Label Content="Promo" HorizontalAlignment="Left" Margin="10,271,0,0" VerticalAlignment="Top"/>
+        <Label Content="Total" HorizontalAlignment="Left" Margin="10,297,0,0" VerticalAlignment="Top" Width="40" RenderTransformOrigin="0.89,0.279"/>
+        <Label x:Name="labelSubTotal" Content="79.000" HorizontalAlignment="Left" Margin="301,245,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="labelPromo" Content="9.000" HorizontalAlignment="Left" Margin="300,271,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="labelTotal" Content="69.000" HorizontalAlignment="Left" Margin="300,292,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.525,0.695"/>
+        <Rectangle HorizontalAlignment="Left" Height="135" Margin="10,63,0,0" Stroke="Black" VerticalAlignment="Top" Width="341"/>
+        <Button Content="DAFTAR MENU" HorizontalAlignment="Left" Height="52" Margin="365,4,0,0" VerticalAlignment="Top" Width="391" Click="onDaftarMenuClicked" Background="#FF4CF42A" FontFamily="Adobe Gothic Std B" FontWeight="Normal" FontSize="30"/>
+        <Label Content="METODE PEMBAYARAN" HorizontalAlignment="Left" Margin="21,67,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="VOUCHER" HorizontalAlignment="Left" Margin="22,133,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Button x:Name="btnGantiPromo" Content="Ganti" HorizontalAlignment="Left" Height="24" Margin="258,159,0,0" VerticalAlignment="Top" Width="85" Click="onBtnGantiPromoClicked"/>
         <Button Content="Ganti" HorizontalAlignment="Left" Height="24" Margin="256,98,0,0" VerticalAlignment="Top" Width="85"/>
         <Separator HorizontalAlignment="Left" Height="3" Margin="380,151,0,0" VerticalAlignment="Top" Width="361"/>
-        <ListBox x:Name="listBoxPromo" HorizontalAlignment="Left" Height="24" Margin="22,211,0,0" VerticalAlignment="Top" Width="229">
+        <ListBox x:Name="voucher" HorizontalAlignment="Left" Height="24" Margin="21,159,0,0" VerticalAlignment="Top" Width="229">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="0,2">
@@ -63,6 +63,9 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <ListBox x:Name="lsitBoxMetodePembayaran" HorizontalAlignment="Left" Height="24" Margin="21,98,0,0" VerticalAlignment="Top" Width="230"/>
+        <Label Content="V 1.0" HorizontalAlignment="Left" Height="28" Margin="282,35,0,0" VerticalAlignment="Top" Width="61" FontSize="9"/>
+        <Label Content="RINCIAN" HorizontalAlignment="Left" Height="34" Margin="10,224,0,0" VerticalAlignment="Top" Width="124" FontWeight="Bold"/>
+        <Label Content="- Terima kasih dan Selamat Menikmati -" HorizontalAlignment="Left" Height="31" Margin="21,356,0,0" VerticalAlignment="Top" Width="325" FontFamily="Rage Italic" FontSize="20" FontStyle="Normal"/>
 
 
     </Grid>
